--- a/Cap3/package.json
+++ b/Cap3/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "meadowlark.js",
+  "name": "cap3",
   "version": "1.0.0",
   "description": "",
   "main": "meadowlark.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "express-handlebars": "^6.0.6"
   }
 }
